# noVM-messenger

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  example.genesis.json  justfile  local.env.example  signed_transfer_test.json  test_rollup.sh  transfer_test.json
.github/workflows/: docker-build-and-push.yml
charts/: deploy.just
charts/astria-chat/: Chart.yaml  values.yaml
charts/astria-chat/files/genesis/: geth-genesis.json
charts/astria-chat/files/scripts/: init-rollup.sh
charts/astria-chat/templates/: configmap.yaml  statefulsets.yaml
charts/chat-rollup/: Chart.yaml  values.yaml
charts/chat-rollup/charts/: composer-1.0.0.tgz
chat-rollup/: Cargo.toml
chat-rollup/src/: action_handler.rs  config.rs  execution_service.rs  lib.rs  main.rs  snapshot.rs
chat-rollup/src/accounts/: action.rs  state_ext.rs
chat-rollup/src/accounts/storage/: keys.rs  values.rs
chat-rollup/src/address/: mod.rs
chat-rollup/src/address/storage/: keys.rs
chat-rollup/src/assets/: mod.rs  query.rs
chat-rollup/src/assets/storage/: keys.rs  values.rs
chat-rollup/src/bridge/: mod.rs  state_ext.rs
chat-rollup/src/bridge/storage/values/: address_bytes.rs  mod.rs
chat-rollup/src/rollup/: mod.rs  rollup.rs  state_ext.rs
chat-rollup/src/rollup/storage/: keys.rs  mod.rs
chat-rollup/src/rollup/storage/values/: block.rs  block_hash.rs  block_height.rs  commitment_state.rs  storage_version.rs
chat-rollup/src/storage/: keys.rs
chat-rollup/src/text/: action.rs  mod.rs  state_ext.rs
chat-rollup/src/text/storage/: keys.rs
chat-rollup/src/text/storage/values/: last_text.rs  text.rs
chat-rollup/src/transaction/: serde.rs
containerfiles/: DockerfileFrontend
crates/chat-rollup/: example.genesis.json  local.env.example
crates/chat-rollup/src/: config.rs  execution_service.rs  lib.rs
crates/chat-rollup/src/accounts/: mod.rs  query.rs  state_ext.rs
crates/chat-rollup/src/accounts/storage/: mod.rs  values.rs
crates/chat-rollup/src/address/: state_ext.rs
crates/chat-rollup/src/address/storage/: values.rs
crates/chat-rollup/src/assets/: mod.rs  state_ext.rs
crates/chat-rollup/src/bridge/storage/: keys.rs
crates/chat-rollup/src/rollup/: mod.rs
crates/chat-rollup/src/rollup/storage/: keys.rs
crates/chat-rollup/src/rollup/storage/values/: block.rs  block_height.rs  block_timestamp.rs
crates/chat-rollup/src/storage/: stored_value.rs
crates/chat-rollup/src/text/: state_ext.rs
crates/chat-rollup/src/text/storage/: keys.rs
crates/chat-rollup/src/text/storage/values/: last_text.rs
crates/rollup-cli/src/: utils.rs
crates/rollup-cli/src/query/: balance.rs  mod.rs  nonce.rs  texts.rs
crates/rollup-cli/src/submit/: text.rs  transfer.rs
crates/rollup-core/src/: lib.rs
crates/rollup-core/src/genesis/: v1.rs
crates/rollup-core/src/transaction/v1/: mod.rs
crates/rollup-core/src/transaction/v1/action/group/: tests.rs
dev/values/rollup/: chat-dev.yaml
dev/values/validators/: all.yml
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
proto/genesis/v1/: types.proto
proto/transaction/v1/: action.proto  transaction.proto
rollup-cli/: Cargo.toml
rollup-cli/src/: lib.rs  main.rs  utils.rs
rollup-cli/src/query/: balance.rs  nonce.rs  texts.rs
rollup-cli/src/rollup/: mod.rs  send_text.rs  submit.rs  transfer.rs
rollup-cli/src/submit/: mod.rs  transfer.rs
rollup-core/: Cargo.toml
rollup-core/src/: lib.rs
rollup-core/src/genesis/: v1.rs
rollup-core/src/transaction/v1/: mod.rs
rollup-core/src/transaction/v1/action/: mod.rs
src/: execution_service.rs  lib.rs  main.rs
src/accounts/: action.rs  mod.rs  state_ext.rs
src/accounts/storage/: keys.rs
src/address/: state_ext.rs
src/assets/: state_ext.rs
src/assets/storage/: keys.rs  values.rs
src/primitive/v1/: mod.rs  u128.rs
src/primitive/v1/asset/: denom.rs  mod.rs
src/protocol/: mod.rs  test_utils.rs
src/protocol/transaction/v1/: mod.rs
src/protocol/transaction/v1/action/: mod.rs
src/protocol/transaction/v1/action/group/: mod.rs  tests.rs
src/rollup/: mod.rs  rollup.rs
src/rollup/storage/: mod.rs
src/rollup/storage/values/: block_timestamp.rs  mod.rs
src/storage/: keys.rs  mod.rs  stored_value.rs
src/text/: action.rs  state_ext.rs
src/text/storage/: mod.rs
src/text/storage/values/: mod.rs  text.rs
src/transaction/: transaction.rs
tools/protobuf-compiler/: Cargo.toml
tools/protobuf-compiler/src/: main.rs
