[package]
name = "uprollup"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["bytes", "derive"] }
cnidarium = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.7", features = [
  "metrics",
] }
anyhow = { version = "1.0.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
dotenv = "0.15"
tracing = "0.1"
serde_json = "1"
sha2 = "0.10.8"
tendermint = "0.34.0"
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.7", default-features = false }
astria-core = { git = "https://github.com/astriaorg/astria.git", package = "astria-core", features = [
    "server",
    "serde",
    "client",
    "unchecked-constructors",
    "test-utils",

] }
tower-abci = "0.12.0"
astria-eyre = { git = "https://github.com/astriaorg/astria.git", package = "astria-eyre", features = [
    "anyhow",
] }
astria-sequencer-client = { git = "https://github.com/astriaorg/astria.git", package = "astria-sequencer-client", features = [
    "http",
] }
astria-telemetry = { git = "https://github.com/astriaorg/astria.git", package = "astria-telemetry", features = [
  "display",
] }
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.17", features = [
  "fmt",
  "env-filter",
  "json",
] }
astria-sequencer = { git = "https://github.com/astriaorg/astria.git", package = "astria-sequencer" }
futures = "0.3"
bytes = "1.8.0"
pbjson-types = { version = "0.6.0" }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
async-trait = "0.1.83"
tonic = "0.10"
warp = "0.3"
sled = "0.34.7"
base64 = "0.22.1"
rand = "0.8.5"
hex = "0.4.3"
telemetry = "0.1.3"
pin-project-lite = "0.2.15"
prost = "0.12.6"
hex-literal = "0.4.1"
clap-stdin = "0.5.1"
