[package]
name = "rollup-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env"] }
color-eyre = "0.6"
astria-core = { git = "https://github.com/astriaorg/astria.git", package = "astria-core", features = [
    "server",
    "serde",
    "client",
    "unchecked-constructors",
    "test-utils",

]}
pbjson-types = { version = "0.6.0" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hex = "0.4.3"
prost = "0.12.6"
tracing-subscriber = "0.3.18"
clap-stdin = "0.5.1"
chat_rollup = { package = "chat-rollup", path = "../chat-rollup"}
serde = { version = "1.0.216", features = ["derive"] }
base64-serde = "0.8.0"
