[package]
name = "rollup-core"
version = "0.1.0"
edition = "2021"

[dependencies]
astria-core = { git = "https://github.com/astriaorg/astria.git", package = "astria-core", features = [
  "server",
  "serde",
  "client",
  "unchecked-constructors",
  "test-utils",

] }
astria-core-address = { git = "https://github.com/astriaorg/astria.git", package = "astria-core-address" }
serde = { workspace = true, optional = true, features = ["derive"] }

prost = { workspace = true }
pbjson-types = { version = "0.6.0" }
pbjson = "0.6.0"
bytes = "1.8.0"
thiserror = "2.0.7"
sha2 = "0.10.8"
hex = "0.4.3"
insta = { version = "1.42.0", features = ["json"] }

[features]
serde = ["dep:serde"]
default = ["serde"]
